parser/src/lexer/snapshots/enderpy_python_parser__lexer__lexer__tests__unterminated-string-2.snap
---
source: parser/src/lexer/lexer.rs
description: "'''hello''"
---
[
    Token {
        kind: Error,
        value: Str(
            "String not terminated",
        ),
        start: 0,
        end: 10,
    },
]
